# Multi_AI_Agent_Project

./: Dockerfile  Jenkinsfile  pyproject.toml  setup.py
app/backend/: api.py
app/core/: ai_agent.py
app/frontend/: ui.py
custom_jenkins/: Dockerfile
